# python-build

./: app.py  pybin.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
